platform/networkpolicies/ingress-allow-vps.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-from-vps
  namespace: ingress
spec:
  podSelector: {}
  policyTypes:
    - Ingress
  ingress:
    - from:
        - ipBlock:
            cidr: 10.8.0.1/32 # IP WireGuard do VPS
      ports:
        - protocol: TCP
          port: 80
        - protocol: TCP
          port: 443
